# GlobalOptimization

./: CMakeLists.txt  Readme.md  generate.sh  unpack.sh
.github/workflows/: ccpp.yml
Src/: CMakeLists.txt  main.cpp
Src/Optimization/: CMakeLists.txt  Function.cpp  Function.h  FunctionFactory.cpp  FunctionFactory.h  IFunction.h  ISolver.h  PiyavskogoMethod.cpp  PiyavskogoMethod.h  SolverFactory.cpp  SolverFactory.hpp  SolverMethod.cpp  SolverMethod.h  SoverMethod.cpp  StronginSolver.cpp  StronginSolver.h  Test.cpp  Test.h  UniformSearchMethod.cpp  UniformSearchMethod.h
Src/Presenters/: CMakeLists.txt  application.hpp  chart.cpp  chart.h  main_window.hpp  surfacegraph.h
